--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-  font-family: "promptmedium", sans-serif;
+  font-family: "promptregular", sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #f5f5f5;
